[gd_scene load_steps=8 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Themes/ornate-theme.tres" type="Theme" id=2]
[ext_resource path="res://Themes/cc.yal.6w4.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Sounds/Yessir.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/FuckYaLife.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 120
extra_spacing_bottom = 38
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 60
extra_spacing_bottom = 15
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -6.0
margin_top = -8.0
margin_right = 971.0
margin_bottom = 540.0
color = Color( 0.0823529, 0.0941176, 0.231373, 1 )

[node name="SplashScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FullScreenLabel" type="Label" parent="SplashScreen"]
margin_left = 647.0
margin_top = 498.0
margin_right = 952.0
margin_bottom = 552.0
text = "Press 5 for fullscreen"

[node name="Label" type="Label" parent="SplashScreen"]
margin_top = 88.0
margin_right = 960.0
margin_bottom = 239.0
custom_fonts/font = SubResource( 1 )
text = "WIND FOR THE WIND GOD"
align = 1
valign = 1

[node name="Label2" type="Label" parent="SplashScreen"]
margin_top = 125.0
margin_right = 960.0
margin_bottom = 348.0
custom_fonts/font = SubResource( 2 )
text = "The Quest for the Seventh Female Wife"
align = 1
valign = 1

[node name="Button" type="Button" parent="SplashScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = 100.0
margin_right = 52.0
margin_bottom = 160.0
text = "Start"

[node name="Story" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Part1" type="Control" parent="Story"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Story/Part1"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -323.0
margin_right = 323.0
margin_bottom = 98.0
text = "For years you have been ridiculed for your quest to find your seventh female wife."
align = 1
valign = 2
autowrap = true

[node name="Label2" type="Label" parent="Story/Part1"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -273.0
margin_right = 274.0
margin_bottom = 264.0
text = "In your desperate search around Coney Island you met the Wind God, who had an offer for you."
align = 1
valign = 2
autowrap = true

[node name="Label3" type="Label" parent="Story/Part1"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -473.0
margin_right = 473.0
margin_bottom = 397.0
text = "\"I will grant you the power over the wind, so that you may use it to enact your revenge on those who did not believe in your quest\""
align = 1
valign = 2
autowrap = true

[node name="Accept" type="Button" parent="Story/Part1"]
visible = false
margin_left = 180.0
margin_top = 443.0
margin_right = 278.0
margin_bottom = 492.0
text = "Accept"

[node name="Deny" type="Button" parent="Story/Part1"]
visible = false
margin_left = 723.0
margin_top = 452.0
margin_right = 821.0
margin_bottom = 501.0
text = "Deny"

[node name="yes" type="AudioStreamPlayer" parent="Story/Part1"]
stream = ExtResource( 4 )
volume_db = -13.0

[node name="no" type="AudioStreamPlayer" parent="Story/Part1"]
stream = ExtResource( 5 )
volume_db = -17.0

[node name="Button" type="Button" parent="Story/Part1"]
margin_left = 447.0
margin_top = 442.0
margin_right = 519.0
margin_bottom = 491.0
text = "back"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="SplashScreen/Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="Story/Part1/Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="Story/Part1/Deny" to="." method="_on_Deny_pressed"]
